2014-01-18      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-gcc/m2expr.c:  CheckAddressToCardinal (New function).
	  BuildAdd use CheckAddressToCardinal for both operands.
	  BuildSub use CheckAddressToCardinal for both operands.
	  BuildDivTrunc use CheckAddressToCardinal for both operands.
	  BuildModTrunc use CheckAddressToCardinal for both operands.
	  BuildDivFloor use CheckAddressToCardinal for both operands.
          BuildModFloor use CheckAddressToCardinal for both operands.
          BuildMult use CheckAddressToCardinal for both operands.
	* gm2/gm2-gcc/m2type.c:  m2_cardinal_address_type_node new
	  internal datatype.  GetCardinalAddressType (New function).
	  build_m2_cardinal_address_type_node (New function).
	* gm2/gm2-gcc/m2type.h:  m2type_GetCardinalAddressType
	  (New function prototype).
	
2014-01-15      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  use $(LINKER) rather than $(XGCC).
	  use $(COMPILER) $(ALL_COMPILERFLAGS) $(ALL_CPPFLAGS)
	  to aid building gm2 as a cross compiler.
	* gm2/gm2-gcc/m2expr.c:  check operand types for ADDRESS
	  in multiply, divide, modulus and issue appropriate errors.
	* gm2/gm2-gcc/m2type.c:  (IsAddress) New function.
	* gm2/gm2-gcc/m2type.def:  (IsAddress) New function.
	* gm2/gm2-gcc/m2type.h:  (IsAddress) New function prototype.
	* gm2/gm2-lang.c:  removed duplicate declaration of gm2_gc_root.
	  Added compiler directives to unused parameters in
	  gm2_langhook_gimplify_expr.

2014-01-14      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  substituted $(CC) for $(COMPILER) when
	  building gm2/gm2-lang.o, gm2/stor-layout.o and gm2/m2pp.o.
	* gm2/gm2-gcc/m2builtins.c:  added BT_FN_NONE to the
	  builtin_prototype enum.  Changed fclass to enum built_in_class.
	  Modified compound constant constructor to contain correct types
	  in the terminating array element.
	* gm2/gm2-gcc/m2convert.c:  remove stop function.
	* gm2/gm2-gcc/m2decl.c:  remove stop function.