@@ -39,3 +39,6 @@ Single
 	 900 4950 5400 5175 5400 5400 900 5175 900 4950
 2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 4
 	 7650 5625 7200 6075 8100 6075 7650 5625
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 5760 7155 5805 6120
