@@ -7,14 +7,10 @@ A4
 Single
 -2
 1200 2
-1 4 1 1 0 7 50 -1 -1 4.000 1 0.0000 8392 7335 282 282 8145 7200 8640 7470
-1 4 0 1 0 7 50 -1 -1 0.000 1 0.0000 1732 2047 160 160 1575 2070 1890 2025
-1 4 0 1 0 7 50 -1 -1 0.000 1 0.0000 3465 2025 160 160 3308 2048 3623 2003
-1 4 0 1 0 7 50 -1 -1 0.000 1 0.0000 4995 2025 160 160 4838 2048 5153 2003
-1 4 0 1 0 7 50 -1 -1 0.000 1 0.0000 6570 2025 160 160 6413 2048 6728 2003
-1 4 0 1 0 7 50 -1 -1 0.000 1 0.0000 5805 5535 160 160 5648 5558 5963 5513
-1 4 0 1 0 7 50 -1 -1 0.000 1 0.0000 4095 5445 160 160 3938 5468 4253 5423
-1 4 0 1 0 7 50 -1 -1 0.000 1 0.0000 2430 5445 160 160 2273 5468 2588 5423
+1 4 1 1 0 7 50 -1 -1 4.000 1 0.0000 1327 1305 282 282 1080 1170 1575 1440
+1 4 1 1 0 7 50 -1 -1 4.000 1 0.0000 7942 1350 282 282 7695 1215 8190 1485
+1 4 1 1 0 7 50 -1 -1 4.000 1 0.0000 7087 2880 282 282 6840 2745 7335 3015
+1 4 1 1 0 7 50 -1 -1 4.000 1 0.0000 2272 1440 282 282 2025 1305 2520 1575
 2 2 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
 	 450 675 9000 675 9000 900 450 900 450 675
 2 2 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
@@ -23,22 +19,23 @@ Single
 	 9225 675 9225 9225 9000 9225 9000 675 9225 675
 2 2 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
 	 675 675 675 9225 450 9225 450 675 675 675
-2 2 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
-	 7740 2970 7920 2970 7920 8865 7740 8865 7740 2970
-2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 1 0 2
-	1 1 1.00 60.00 120.00
-	 8325 6750 8595 4095
-2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 4
-	 2430 3420 1755 4275 2970 4275 2385 3420
-2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 4
-	 4608 3363 3933 4218 5148 4218 4563 3363
-2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 4
-	 6768 3363 6093 4218 7308 4218 6723 3363
 2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
-	 1125 6705 3330 6975 3240 7290 1170 7020 1170 6705
+	 811 2010 7561 2235 7336 2460 811 2235 811 2010
 2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
-	 5220 6975 5310 7290 7380 6570 7290 6300 5220 7020
-2 2 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
-	 2700 8550 3150 8550 3150 8865 2700 8865 2700 8550
-2 2 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
-	 4770 8550 5310 8550 5310 8865 4770 8865 4770 8550
+	 1837 3715 1837 3940 8812 3490 8812 3265 1837 3715
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
+	 4590 8010 4590 8910 5040 8910 5040 8010 4590 8010
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 4
+	 4860 7155 4185 7830 5535 7830 4860 7155
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
+	 1980 7965 1980 8865 2430 8865 2430 7965 1980 7965
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
+	 7290 7920 7290 8820 7740 8820 7740 7920 7290 7920
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 4
+	 2250 7065 1575 7740 2925 7740 2250 7065
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 4
+	 7515 7065 6840 7740 8190 7740 7515 7065
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
+	 900 4950 5400 5175 5400 5400 900 5175 900 4950
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 4
+	 7650 5625 7200 6075 8100 6075 7650 5625
