@@ -430,7 +430,7 @@ PROCEDURE BuildIfNotInRangeGoto (location: location_t; var: Tree; low: Tree; hig
                  given, lowIndice.
 *)
 
-PROCEDURE BuildArray (type: Tree; array: Tree; index: Tree; lowIndice: Tree; elementSize: Tree) : Tree ;
+PROCEDURE BuildArray (type: Tree; array: Tree; index: Tree; lowIndice: Tree) : Tree ;
 
 
 (*
